buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net/' }
        maven { url = 'https://maven.parchmentmc.org' }
        maven { url = 'https://plugins.gradle.org/m2/' }
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.parchmentmc:librarian:1.+'
        classpath 'gradle.plugin.com.matthewprenger:CurseGradle:1.4.0'
    }
}

plugins { id "com.modrinth.minotaur" version "2.+" }
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'eclipse'
apply plugin: 'com.matthewprenger.cursegradle'
apply plugin: 'maven-publish'
if (project.file('../gradletools.gradle').exists()) {
    apply from: '../gradletools.gradle'
} else {
    apply from: 'https://raw.githubusercontent.com/McJtyMods/MultiWorkspace/1.19_tech/gradletools.gradle'
}

repositories {
    maven { url "https://dvs1.progwml6.com/files/maven" } // JEI
    maven { url "https://maven.blamejared.com" } // Patchouli
    maven { url "https://maven.k-4u.nl" } // McJtyLib, TOP
    maven { url "https://maven.theillusivec4.top/" } // Curios
}

group = "com.github.mcjty"
archivesBaseName = 'fancytrinkets'
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

runs('fancytrinkets')
jars('fancytrinkets')

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

dependencies {
    mc()
    jei()
    curios()
    top()
    mcjtylib()
}

publish()

cfdeps(['the-one-probe'], ['mcjtylib', 'curios'], ['1.19.3', '1.19.4'])
modrinth(['the-one-probe'], ['mcjtylib', 'curios'], ['1.19.3', '1.19.4'])
